test case update